--- a/front/resource/css/styles.css
+++ b/front/resource/css/styles.css
@@ -42,3 +42,15 @@ nav a{
 nav{
     border-bottom: solid 2px #333333;
 }
+
+.w-fit{
+    width: fit-content;
+}
+.h-fit{
+    height: fit-content;
+}
+
+.pagination-nav{
+    background-color: #121212 !important;
+    border: none;
+}
